--- a/Read_Data.ipynb
+++ b/Read_Data.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "df = pd.DataFrame('data/') #ready to read data form path"
    ]
   }
  ],
@@ -26,7 +27,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
