filtered all json readin ipynb to only four city

--- a/tip_to_df.ipynb
+++ b/tip_to_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "business_id\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(38117,)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import filtered business_id as dataframe from pickle\n",
+    "with open('data/yelp-dataset/df_business.pickle', 'rb') as fp:\n",
+    "    df_business_id = pickle.load(fp)\n",
+    "print(df_business_id.name)\n",
+    "df_business_id.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,12 +54,13 @@
        "['{\"text\":\"Get here early enough to have dinner.\",\"date\":\"2012-07-15\",\"likes\":0,\"business_id\":\"tJRDll5yqpZwehenzE2cSg\",\"user_id\":\"zcTZk7OG8ovAmh_fenH21g\"}\\n']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# readin tip.json\n",
     "with open('data/yelp-dataset/yelp_academic_dataset_tip.json') as fp:\n",
     "    json_tip = fp.readlines()\n",
     "json_tip[:1]"
@@ -36,9 +68,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before fileter (1185348, 5)\n",
+      "no NaN, as show in isna(): business_id    0\n",
+      "date           0\n",
+      "likes          0\n",
+      "text           0\n",
+      "user_id        0\n",
+      "dtype: int64\n",
+      "after filter (472976, 5)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -69,75 +115,80 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>tJRDll5yqpZwehenzE2cSg</td>\n",
-       "      <td>2012-07-15</td>\n",
+       "      <th>53</th>\n",
+       "      <td>QFPS9JBNdOOHVP0C3pSslw</td>\n",
+       "      <td>2012-08-22</td>\n",
        "      <td>0</td>\n",
-       "      <td>Get here early enough to have dinner.</td>\n",
-       "      <td>zcTZk7OG8ovAmh_fenH21g</td>\n",
+       "      <td>The place to go after work, but, it ain't cheap</td>\n",
+       "      <td>TvkqJ8YEIsTb16RnnrNyfQ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2ThtBbeDqFkVi6LugUOcVA</td>\n",
-       "      <td>2012-11-25</td>\n",
+       "      <th>131</th>\n",
+       "      <td>MTsIckdo3_uKuqk3B4zuKA</td>\n",
+       "      <td>2012-10-20</td>\n",
        "      <td>0</td>\n",
-       "      <td>Don't use them! Double charged my boyfriend an...</td>\n",
-       "      <td>M5n8mMFoeXjnJEV2gxyGGA</td>\n",
+       "      <td>The Cleveland Pickle is the best sandwich deli...</td>\n",
+       "      <td>MolXvMRbUNY6Yr_s0zEQ0A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>jH19V2I9fIslnNhDzPmdkA</td>\n",
-       "      <td>2015-08-12</td>\n",
+       "      <th>216</th>\n",
+       "      <td>gh6__q2WXFuyN8gt6VAnWw</td>\n",
+       "      <td>2016-04-11</td>\n",
        "      <td>0</td>\n",
-       "      <td>Great breakfast large portions and friendly wa...</td>\n",
-       "      <td>ZcLKXikTHYOnYt5VYRO5sg</td>\n",
+       "      <td>Pittsburgh says:  GREAT FOOD!  Thanks, Luby!</td>\n",
+       "      <td>PZNMPWCViVX8JLsn10MSnQ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>dAa0hB2yrnHzVmsCkN4YvQ</td>\n",
-       "      <td>2014-06-20</td>\n",
+       "      <th>399</th>\n",
+       "      <td>uv-e-d43NN-1_DcCoJL-Og</td>\n",
+       "      <td>2011-11-26</td>\n",
        "      <td>0</td>\n",
-       "      <td>Nice place. Great staff.  A fixture in the tow...</td>\n",
-       "      <td>oaYhjqBbh18ZhU0bpyzSuw</td>\n",
+       "      <td>Christmas doing for Judee do.e</td>\n",
+       "      <td>blrWvPePSv87aU9hV1Zd8Q</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>dAa0hB2yrnHzVmsCkN4YvQ</td>\n",
-       "      <td>2016-10-12</td>\n",
+       "      <th>401</th>\n",
+       "      <td>0youcKV6-eE3F2MQj1l6Fw</td>\n",
+       "      <td>2010-11-25</td>\n",
        "      <td>0</td>\n",
-       "      <td>Happy hour 5-7 Monday - Friday</td>\n",
-       "      <td>ulQ8Nyj7jCUR8M83SUMoRQ</td>\n",
+       "      <td>A bit different. Out at a restaurant for Thank...</td>\n",
+       "      <td>blrWvPePSv87aU9hV1Zd8Q</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              business_id        date  likes  \\\n",
-       "0  tJRDll5yqpZwehenzE2cSg  2012-07-15      0   \n",
-       "1  2ThtBbeDqFkVi6LugUOcVA  2012-11-25      0   \n",
-       "2  jH19V2I9fIslnNhDzPmdkA  2015-08-12      0   \n",
-       "3  dAa0hB2yrnHzVmsCkN4YvQ  2014-06-20      0   \n",
-       "4  dAa0hB2yrnHzVmsCkN4YvQ  2016-10-12      0   \n",
+       "                business_id        date  likes  \\\n",
+       "53   QFPS9JBNdOOHVP0C3pSslw  2012-08-22      0   \n",
+       "131  MTsIckdo3_uKuqk3B4zuKA  2012-10-20      0   \n",
+       "216  gh6__q2WXFuyN8gt6VAnWw  2016-04-11      0   \n",
+       "399  uv-e-d43NN-1_DcCoJL-Og  2011-11-26      0   \n",
+       "401  0youcKV6-eE3F2MQj1l6Fw  2010-11-25      0   \n",
        "\n",
-       "                                                text                 user_id  \n",
-       "0              Get here early enough to have dinner.  zcTZk7OG8ovAmh_fenH21g  \n",
-       "1  Don't use them! Double charged my boyfriend an...  M5n8mMFoeXjnJEV2gxyGGA  \n",
-       "2  Great breakfast large portions and friendly wa...  ZcLKXikTHYOnYt5VYRO5sg  \n",
-       "3  Nice place. Great staff.  A fixture in the tow...  oaYhjqBbh18ZhU0bpyzSuw  \n",
-       "4                     Happy hour 5-7 Monday - Friday  ulQ8Nyj7jCUR8M83SUMoRQ  "
+       "                                                  text                 user_id  \n",
+       "53     The place to go after work, but, it ain't cheap  TvkqJ8YEIsTb16RnnrNyfQ  \n",
+       "131  The Cleveland Pickle is the best sandwich deli...  MolXvMRbUNY6Yr_s0zEQ0A  \n",
+       "216       Pittsburgh says:  GREAT FOOD!  Thanks, Luby!  PZNMPWCViVX8JLsn10MSnQ  \n",
+       "399                     Christmas doing for Judee do.e  blrWvPePSv87aU9hV1Zd8Q  \n",
+       "401  A bit different. Out at a restaurant for Thank...  blrWvPePSv87aU9hV1Zd8Q  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Create dataframe and filter by cities\n",
     "list_ = []\n",
     "for i_line in json_tip:\n",
     "    list_.append(json.loads(i_line))\n",
     "df_tip = pd.DataFrame(list_)\n",
+    "print('before fileter', df_tip.shape)\n",
+    "print('no NaN, as show in isna():', df_tip.isna().sum())\n",
+    "df_tip = df_tip[df_tip['business_id'].isin(df_business_id)]\n",
+    "print('after filter', df_tip.shape)\n",
     "df_tip.head()\n",
     "    "
    ]
