--- a/user_to_df.ipynb
+++ b/user_to_df.ipynb
@@ -14,7 +14,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "business_id\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(38117,)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import filtered business_id as dataframe from pickle\n",
+    "with open('data/yelp-dataset/df_business.pickle', 'rb') as fp:\n",
+    "    df_business_id = pickle.load(fp)\n",
+    "print(df_business_id.name)\n",
+    "df_business_id.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -24,12 +55,13 @@
        " '{\"user_id\":\"XvLBr-9smbI0m_a7dXtB7w\",\"name\":\"Daipayan\",\"review_count\":2,\"yelping_since\":\"2015-09-05\",\"friends\":\"None\",\"useful\":0,\"funny\":0,\"cool\":0,\"fans\":0,\"elite\":\"None\",\"average_stars\":5.0,\"compliment_hot\":0,\"compliment_more\":0,\"compliment_profile\":0,\"compliment_cute\":0,\"compliment_list\":0,\"compliment_note\":0,\"compliment_plain\":0,\"compliment_cool\":0,\"compliment_funny\":0,\"compliment_writer\":0,\"compliment_photos\":0}\\n']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# readin user.json\n",
     "with open('data/yelp-dataset/yelp_academic_dataset_user.json') as fp:\n",
     "    json_user = fp.readlines()\n",
     "json_user[:2]"
@@ -42,51 +74,211 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>average_stars</th>\n",
+       "      <th>compliment_cool</th>\n",
+       "      <th>compliment_cute</th>\n",
+       "      <th>compliment_funny</th>\n",
+       "      <th>compliment_hot</th>\n",
+       "      <th>compliment_list</th>\n",
+       "      <th>compliment_more</th>\n",
+       "      <th>compliment_note</th>\n",
+       "      <th>compliment_photos</th>\n",
+       "      <th>compliment_plain</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cool</th>\n",
+       "      <th>elite</th>\n",
+       "      <th>fans</th>\n",
+       "      <th>friends</th>\n",
+       "      <th>funny</th>\n",
+       "      <th>name</th>\n",
+       "      <th>review_count</th>\n",
+       "      <th>useful</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>yelping_since</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Susan</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>lzlZwIpuSWXEnNS91wxjHw</td>\n",
+       "      <td>2015-09-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Daipayan</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>XvLBr-9smbI0m_a7dXtB7w</td>\n",
+       "      <td>2015-09-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Andy</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>QPT4Ud4H5sJVr68yXhoWFw</td>\n",
+       "      <td>2016-07-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Jonathan</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>i5YitlHZpf0B3R0s_8NVuw</td>\n",
+       "      <td>2014-08-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Shashank</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>s4FoIXE_LSGviTHBe8dmcg</td>\n",
+       "      <td>2017-06-18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[{'user_id': 'lzlZwIpuSWXEnNS91wxjHw',\n",
-       "  'name': 'Susan',\n",
-       "  'review_count': 1,\n",
-       "  'yelping_since': '2015-09-28',\n",
-       "  'friends': 'None',\n",
-       "  'useful': 0,\n",
-       "  'funny': 0,\n",
-       "  'cool': 0,\n",
-       "  'fans': 0,\n",
-       "  'elite': 'None',\n",
-       "  'average_stars': 2.0,\n",
-       "  'compliment_hot': 0,\n",
-       "  'compliment_more': 0,\n",
-       "  'compliment_profile': 0,\n",
-       "  'compliment_cute': 0,\n",
-       "  'compliment_list': 0,\n",
-       "  'compliment_note': 0,\n",
-       "  'compliment_plain': 0,\n",
-       "  'compliment_cool': 0,\n",
-       "  'compliment_funny': 0,\n",
-       "  'compliment_writer': 0,\n",
-       "  'compliment_photos': 0},\n",
-       " {'user_id': 'XvLBr-9smbI0m_a7dXtB7w',\n",
-       "  'name': 'Daipayan',\n",
-       "  'review_count': 2,\n",
-       "  'yelping_since': '2015-09-05',\n",
-       "  'friends': 'None',\n",
-       "  'useful': 0,\n",
-       "  'funny': 0,\n",
-       "  'cool': 0,\n",
-       "  'fans': 0,\n",
-       "  'elite': 'None',\n",
-       "  'average_stars': 5.0,\n",
-       "  'compliment_hot': 0,\n",
-       "  'compliment_more': 0,\n",
-       "  'compliment_profile': 0,\n",
-       "  'compliment_cute': 0,\n",
-       "  'compliment_list': 0,\n",
-       "  'compliment_note': 0,\n",
-       "  'compliment_plain': 0,\n",
-       "  'compliment_cool': 0,\n",
-       "  'compliment_funny': 0,\n",
-       "  'compliment_writer': 0,\n",
-       "  'compliment_photos': 0}]"
+       "   average_stars  compliment_cool  compliment_cute  compliment_funny  \\\n",
+       "0           2.00                0                0                 0   \n",
+       "1           5.00                0                0                 0   \n",
+       "2           4.00                0                0                 0   \n",
+       "3           4.05                0                0                 0   \n",
+       "4           3.00                0                0                 0   \n",
+       "\n",
+       "   compliment_hot  compliment_list  compliment_more  compliment_note  \\\n",
+       "0               0                0                0                0   \n",
+       "1               0                0                0                0   \n",
+       "2               0                0                0                0   \n",
+       "3               0                0                0                0   \n",
+       "4               0                0                0                0   \n",
+       "\n",
+       "   compliment_photos  compliment_plain      ...        cool  elite  fans  \\\n",
+       "0                  0                 0      ...           0   None     0   \n",
+       "1                  0                 0      ...           0   None     0   \n",
+       "2                  0                 0      ...           0   None     0   \n",
+       "3                  0                 0      ...           0   None     0   \n",
+       "4                  0                 0      ...           0   None     0   \n",
+       "\n",
+       "  friends  funny      name  review_count useful                 user_id  \\\n",
+       "0    None      0     Susan             1      0  lzlZwIpuSWXEnNS91wxjHw   \n",
+       "1    None      0  Daipayan             2      0  XvLBr-9smbI0m_a7dXtB7w   \n",
+       "2    None      0      Andy             1      0  QPT4Ud4H5sJVr68yXhoWFw   \n",
+       "3    None      0  Jonathan            19      0  i5YitlHZpf0B3R0s_8NVuw   \n",
+       "4    None      0  Shashank             3      0  s4FoIXE_LSGviTHBe8dmcg   \n",
+       "\n",
+       "   yelping_since  \n",
+       "0     2015-09-28  \n",
+       "1     2015-09-05  \n",
+       "2     2016-07-21  \n",
+       "3     2014-08-04  \n",
+       "4     2017-06-18  \n",
+       "\n",
+       "[5 rows x 22 columns]"
       ]
      },
      "execution_count": 6,
@@ -95,10 +287,17 @@
     }
    ],
    "source": [
+    "# Create dataframe and filter by cities\n",
     "list_ = []\n",
     "for i_line in json_user:\n",
     "    list_.append(json.loads(i_line))\n",
-    "list_[:2]"
+    "\n",
+    "df_user = pd.DataFrame(list_)\n",
+    "# print('before fileter', df_user.shape)\n",
+    "# print('no NaN, as show in isna():', df_user.isna().sum())\n",
+    "# df_user = df_user[df_user['business_id'].isin(df_business_id)]\n",
+    "# print('after filter', df_user.shape)\n",
+    "df_user.head()"
    ]
   },
   {
