--- a/user_to_df.ipynb
+++ b/user_to_df.ipynb
@@ -45,6 +45,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2         O8S5hYJ1SMc8fA4QBtVujA\n",
+       "11        tZnSodhPwNr4bzrwJ1CSbw\n",
+       "16        r89Re4FNgVWHgBfjCVZyVw\n",
+       "19        vJIuDBdu01vCA8y1fwR1OQ\n",
+       "23        5J3b7j3Fzo9ISjChmoUoUA\n",
+       "32        kgffcoxT6BQp-gJ-UQ7Czw\n",
+       "33        0jtRI7hVMpQHpUVtUy4ITw\n",
+       "37        qHF2s8U2yzPLgIOGH_IMBw\n",
+       "44        0i6GlR5YTCMlwthjqw6ZTQ\n",
+       "45        oSS0p8TeF9BTTD7QWtO6gg\n",
+       "50        DR30lzIHVTF6xhyMI-3IlQ\n",
+       "52        VVtPNiqwtR_Os7J51mANGQ\n",
+       "80        YIez_A3WOt9J2SXN7OMa2Q\n",
+       "82        xuUzASHWjRJRFv6Ck5pO7g\n",
+       "88        mr3rQcYBKWu2L6o7qtQ9Wg\n",
+       "95        Q_cfbLdAxkLiEZW5TO5T6A\n",
+       "96        Ea5a2Ov4s_D3Vx4j7jkEEg\n",
+       "97        cuXCQM-9VwpZlSneEY1b3w\n",
+       "110       pnYDtPaVw_xRBHm9y0y4gg\n",
+       "111       hsWx7ya8jLMhi8ZWX23Thg\n",
+       "118       -26MGfikhJiTfCI-GqmzhQ\n",
+       "123       lBzZKw6FYxbin9de9GAhTQ\n",
+       "126       i2Fd0dl39BZ8nVxBnSPsKg\n",
+       "129       2j5hnwYzS-YLJn6IFqloCw\n",
+       "131       OLg1IeS-QxZgNprQ4Hg9gg\n",
+       "134       hU9R0xQiZb2_b8tZituFYA\n",
+       "137       735UkyT4px_oeW3iyotGmA\n",
+       "141       zhxnD7J5_sCrKSw5cwI9dQ\n",
+       "143       2kWrSFkIes_d2BMg4YrRtA\n",
+       "146       _T8qy9XAKAFLJdmoLg1Q-g\n",
+       "                   ...          \n",
+       "188499    CsLKFf9o7d9YZO2hsu6hzA\n",
+       "188500    bWZ6xFCL9FeAUPFmbAgAAw\n",
+       "188502    B8zlK5jEGAUJtIfhLA71jw\n",
+       "188505    QmJCAjen_OK_wU53XmMosg\n",
+       "188516    _eysP-l3yXpCqMHOQEptdQ\n",
+       "188517    dxBeA7XHTlBQKu9ypEJxwg\n",
+       "188529    3zJdvcJldp8OTYfaQhy6Iw\n",
+       "188530    p2qoi-QKUs_p6QkDEKVNOg\n",
+       "188536    Ykn6eHLY8vPHuUH7UQrvxw\n",
+       "188538    W5d8iNog90R-qw43m5dGwg\n",
+       "188539    rbXaYPyC6qSYzeggPcbHYQ\n",
+       "188540    96O69oTa04Dnu1m1pyzY7w\n",
+       "188541    _z0G1mVB_vQmT2aNqfZXKA\n",
+       "188545    eW1EJrcMDIQMHpW4fJxg2w\n",
+       "188547    qjyOjCHG9lOkZnAa8jIQ1g\n",
+       "188548    wK6bv6_TKdbAswbMNfO_2w\n",
+       "188549    Sgkwj5jlFQjpZnb4ASLuxw\n",
+       "188558    H1I6hoLA02U5huKlt9wVRA\n",
+       "188566    m75vszskLJ1a14Ybco4IaA\n",
+       "188568    v62o0cbntlpDXYaJtO9Lmw\n",
+       "188569    CorrByydi35r-6SvmhYFHA\n",
+       "188570    K9ukZjvXhDjQZnrrOPqKSw\n",
+       "188572    GdGXb80QKTMRP7AdPHDnuw\n",
+       "188573    JUygwe5d_MXCCOdk0WB30g\n",
+       "188580    -3bL-QmK7-qBYLmQuSekBw\n",
+       "188582    i3AziW_jq009bm26PLXdLA\n",
+       "188583    FxEoO2etCPrPLFOnGwV-Ww\n",
+       "188584    jYU4Nd71giCWpLuj5JIxgg\n",
+       "188585    Y_7sZoSLTJ-2mNZS8JS5Pg\n",
+       "188592    NkOvIueadjFUxeCyq_uQEw\n",
+       "Name: business_id, Length: 38117, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_business_id"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
